# xfuse

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.org  TODOs.org  pyproject.toml  refresh_version.py  setup.cfg  setup.py
.github/workflows/: build.yml
dloss/: __main__.py  __version__.py
hssl/: __init__.py  __main__.py  _config.py  analyze.py  dataset.py  distributions.py  image.py  logging.py  network.py  optimizer.py  run.py  train.py  utility.py
hssl/analyze/: __init__.py  analyze.py  differential_expression.py  gene_maps.py
hssl/convert/: __init__.py  st.py  utility.py  visium.py
hssl/data/: __init__.py  dataset.py  image.py
hssl/data/slide/: __init__.py  full_slide.py  random_slide.py  slide.py
hssl/data/utility/: image.py  misc.py
hssl/handlers/: __init__.py  checkpointer.py  noop.py  value_modifier.py
hssl/handlers/stats/: __init__.py  elbo.py  factor_activation.py  image.py  latent.py  log_likelihood.py  rmse.py  scale.py  stats_handler.py
hssl/model/: __init__.py  xfuse.py
hssl/model/experiment/: __init__.py  experiment.py  image.py  st.py
hssl/model/experiment/st/: __init__.py  factor_eval.py  factor_expansion_strategy.py  st.py
hssl/model/utility/: __init__.py  model_comparison.py
hssl/session/: __init__.py  session.py  session_item.py
hssl/session/item/: __init__.py  default_device.py  global_step.py  log_file.py  log_level.py  model.py  optimizer.py  param_store.py  pyro_stack.py  save_path.py
hssl/session/items/: __init__.py  dataloader.py  global_step.py  log_file.py  log_level.py  model.py  optimizer.py  param_store.py  pyro_stack.py
hssl/utility/: __init__.py  file.py  init_args.py  misc.py  modules.py  session.py  state.py  utility.py  visualization.py
scripts/: plot_training_stats.R  prepare_data.py  prepare_data_10x.py  sync_version.py  visualize_tissue_masks.py
tests/: conftest.py  test_functional.py  test_integration.py
tests/analyze/: test_differential_expression.py  test_gene_maps.py  test_imputation.py  test_metagenes.py  test_prediction.py
tests/data/: test_analysis_exit_status.1.toml  test_restore_session.1.toml  test_restore_session.2.toml  test_restore_session.toml  test_stats_writers.1.toml  test_train_exit_status.1.toml
tests/data/files/: toydata.h5
tests/data/files/st/: counts.tsv  spots.tsv  transformation.txt
tests/data/files/visium/: barcode_list.tsv  data.h5  genepix_data.gpr  scale_factors.json  tissue_positions.csv
tests/data/test1/: data.h5  design.csv  image.tif  label.tif
tests/model/experiment/: test_st.py
xfuse/: __init__.py  __main__.py  __version__.py  _config.py  optim.py  run.py  train.py
xfuse/analyze/: __init__.py  differential_expression.py  dream.py  gene_maps.py  imputation.py  metagenes.py  prediction.py  synthetic.py
xfuse/convert/: __init__.py  image.py  st.py  synthetic.py  utility.py  visium.py
xfuse/data/: __init__.py  dataset.py  synthetic.py
xfuse/data/slide/: __init__.py  data_slide.py  full_slide.py  random_slide.py  slide.py
xfuse/data/slide/data/: __init__.py  annotated_image.py  slide_data.py  st_slide.py  synthetic_slide.py
xfuse/data/slide/iterator/: __init__.py  data_iterator.py  full_slide_iterator.py  random_iterator.py  slide_iterator.py
xfuse/data/utility/: misc.py
xfuse/handlers/: checkpointer.py
xfuse/handlers/stats/: __init__.py  elbo.py  factor_activation.py  latent.py  log_likelihood.py  metagene_activation.py  rmse.py  scale.py  stats_handler.py
xfuse/handlers/stats/writer/: file.py  stats_writer.py  tensorboard.py
xfuse/logging/: __init__.py  formatter.py  logging.py  setup.py
xfuse/messengers/: __init__.py  analysis_runner.py  checkpointer.py
xfuse/messengers/stats/: __init__.py  conditions.py  elbo.py  image.py  latent.py  log_likelihood.py  metagene_activation.py  rmse.py  scale.py  stats_handler.py
xfuse/messengers/stats/writer/: __init__.py  file.py  stats_writer.py  tensorboard.py
xfuse/model/: xfuse.py
xfuse/model/experiment/: experiment.py  image.py
xfuse/model/experiment/st/: __init__.py  metagene_eval.py  metagene_expansion_strategy.py  st.py
xfuse/model/utility/: model_comparison.py
xfuse/session/: __init__.py  io.py  session.py  session_item.py
xfuse/session/items/: __init__.py  colormap.py  covariates.py  dataloader.py  default_device.py  eval.py  genes.py  learning_rate.py  log_file.py  log_level.py  messengers.py  model.py  mpl_backend.py  optimizer.py  pyro_stack.py  rng_state.py  save_path.py  stats_writers.py  training_data.py  work_dir.py
xfuse/utility/: __init__.py  core.py  design.py  file.py  mask.py  modules.py  pyro.py  session.py  tensor.py  utility.py  visualization.py
xfuse/utility/state/: __init__.py  getters.py  state.py
