[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79

[tool.poetry]
name = "xfuse"
version = "0.1.0"
description = "Deep spatial data fusion"
authors = ["Ludvig Bergenstråhle <ludvig.bergenstrahle@scilifelab.se>"]

[tool.poetry.dependencies]
actnorm = {git = "https://github.com/ludvb/actnorm", rev = "master"}
click = "^7.0"
h5py = "^2.10.0"
imageio = "^2.6.1"
ipdb = "^0.12.3"
matplotlib = "^3.1.2"
numpy = "^1.18.0"
pandas = "^0.25.3"
pyro-ppl = "^1.1.0"
python = "^3.7"
scikit-learn = "^0.22"
scipy = "^1.4.1"
tensorboard = "^2.1.0"
tifffile = "2019.7.26"
tomlkit = "^0.5.8"
torch = "^1.3.1"
torchvision = "^0.4.2"
tqdm = "^4.41.0"
umap-learn = "^0.3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-black = "^0.3.7"
pytest-console-scripts = "^0.2.0"
pytest-datadir = "^1.3.1"
pytest-mock = "^1.13.0"
pytest-mypy = "^0.4.2"
pytest-pylint = "^0.14.1"
pytest-runner = "^5.2"

[tool.poetry.scripts]
xfuse = "xfuse.__main__:cli"
