[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79

[tool.poetry]
name = "xfuse"
version = "0.1.1-alpha.1"
description = "Deep spatial data fusion"
authors = ["Ludvig Bergenstråhle <ludvig.bergenstrahle@scilifelab.se>"]

[tool.poetry.dependencies]
click = "^7.0"
h5py = "^2.10.0"
imageio = "^2.6.1"
ipdb = "^0.12.3"
matplotlib = "^3.1.2"
numpy = "^1.18.0"
pandas = "^0.25.3"
Pillow = "^6.2.1"
pyro-ppl = "^1.1.0"
python = "^3.8.0"
scikit-learn = "^0.22"
scipy = "^1.4.1"
tensorboard = "^2.1.0"
tifffile = "2019.7.26"
tomlkit = "^0.5.8"
torch = "^1.4.0"
torchvision = "^0.5.0"
tqdm = "^4.41.0"
umap-learn = "^0.3.10"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
pre-commit = "^1.20.0"
pylint = "^2.4.4"
pytest = "^5.3.2"
pytest-console-scripts = "^0.2.0"
pytest-cov = "^2.8.1"
pytest-datadir = "^1.3.1"
pytest-mock = "^1.13.0"
pytest-runner = "^5.2"

[tool.poetry.scripts]
xfuse = "xfuse.__main__:cli"
