[metadata]
name = hssl
version = attr: hssl.__version__

[options]
zip_safe = True
packages = find:
install_requires =
  click ~= 7.0
  dfply ~= 0.3, >= 0.3.3
  h5py ~= 2.10, >= 2.10.0
  imageio ~= 2.5, >= 2.5.0
  ipdb ~= 0.12, >= 0.12.2
  numpy ~= 1.16, >= 1.16.0
  pandas ~= 0.25, >= 0.25.0
  pyro-ppl ~= 0.4, >= 0.4.1
  plotnine ~= 0.5, >= 0.5.1
  pyvips ~= 2.1, >= 2.1.5
  scikit-learn ~= 0.20, >= 0.20.2
  scipy ~= 1.2, >= 1.2.1
  torch ~= 1.2, >= 1.2.0
  torchvision ~= 0.2, >= 0.2.1
  tqdm ~= 4.31, >= 4.31.1
python_requires = ~= 3.7
setup_requires =
  pytest-runner ~= 2.0
tests_require =
  pytest ~= 5.2, >= 5.2.1

[options.entry_points]
console_scripts =
  hssl = hssl.__main__:cli

[tool:pytest]
addopts = --doctest-modules

[aliases]
test=pytest