[metadata]
name = hssl
version = attr: hssl.__version__

[aliases]
test = pytest

[options]
zip_safe = True
packages = find:
python_requires = ~= 3.7
install_requires =
  click ~= 7.0
  h5py ~= 2.10, >= 2.10.0
  imageio ~= 2.5, >= 2.5.0
  ipdb ~= 0.12, >= 0.12.2
  numpy ~= 1.16, >= 1.16.0
  pandas ~= 0.25, >= 0.25.0
  pyro-ppl ~= 0.4, >= 0.4.1
  pyvips ~= 2.1, >= 2.1.5
  scikit-learn ~= 0.20, >= 0.20.2
  scipy ~= 1.2, >= 1.2.1
  tensorboard ~= 2.0, >= 2.0.0
  torch ~= 1.3, >= 1.3.0
  torchvision ~= 0.2, >= 0.2.1
  tqdm ~= 4.31, >= 4.31.1
setup_requires =
  pytest-runner ~= 2.0
tests_require =
  pytest ~= 5.2, >= 5.2.1
  pytest-black ~= 0.3, >= 0.3.7
  pytest-console-scripts ~= 0.1, >= 0.1.10
  pytest-datadir ~= 1.3, >= 1.3.0
  pytest-mock ~= 1.11, >= 1.11.1
  pytest-mypy ~= 0.4, >= 0.4.1
  pytest-pylint ~= 0.14, >= 0.14.1

[options.entry_points]
console_scripts =
  hssl = hssl.__main__:cli

[tool:pytest]
addopts =
  --doctest-modules
  --black
  --mypy
  --pylint

[mypy]
ignore_missing_imports = True
